--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome to the home page</h1>
 <h2>Change to snippet</h2>
 
-<div class="example_snippet" data-mercury="full">
-  default content
+<div id='home_content' class="example_snippet" data-mercury="full">
+  <%= TextChunk.find_by_name('homepage/content').text_chunk.html_safe %>
 </div>
